# get-gphotos-data

./: CHANGELOG.md  README.md  pyproject.toml
github-pages-website/: index.html  privacy.html  terms.html
src/get_gphotos_data/: main_window.py
src/get_gphotos_data/assets/ui/: google_photos_view.ui
src/get_gphotos_data/core/: paths.py
src/get_gphotos_data/photos/: __init__.py  auth.py  client.py
src/get_gphotos_data/widgets/: google_photos.py
